--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,34 @@
 * {
     margin: 20px;
+    font-family: "Poppins", sans-serif;
+}
+
+
+
+.red {
+    background-color: red;
+    width: 5%;
+    height: 5%;
+    position: absolute;
+    top: 1%;
+    right:9%;
+} .green {
+    background-color: green;
+    width: 5%;
+    height: 5%;
+    position: absolute;
+    top: 1%;
+    right:15%;
+}
+
+.redh {
+    position: absolute;
+    top: 3%;
+    right:9%;
+} .greenh {
+    position: absolute;
+    top: 3%;
+    right:15%;  
 }
 
 .info {
